// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  <div
    aria-describedby={null}
    aria-labelledby={null}
    className="Notification__NotificationContainer-sc-1wz6254-1 cWsdIK"
    id={null}
    onClick={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 bHcZEt Notification__ContentWrapper-sc-1wz6254-0 cNubMo"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 JIWVz Banner__StyledBanner-sc-6825al-0 bfAGjz"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
              id={null}
              rows={null}
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 KxMwb"
                fontSize="1.15em"
                fontWeight={400}
                letterSpacing="0px"
              >
                This is a Standard notification.
              </h5>
            </section>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 bDhxPl"
              disabled={null}
              href={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 fvyOLy Banner__Close-sc-6825al-1 cgOoTm"
                color="link"
                data-icon="times"
                data-prefix="far"
                focusable="false"
                fontSize="1.35em"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
        fontSize="0.876em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.2px"
      >
        Show Notification
      </label>
    </section>
  </button>,
]
`;

exports[` 2`] = `
Array [
  <div
    aria-describedby={null}
    aria-labelledby={null}
    className="Notification__NotificationContainer-sc-1wz6254-1 gupnfs"
    id={null}
    onClick={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 bHcZEt Notification__ContentWrapper-sc-1wz6254-0 cNubMo"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <div
        className="Card__CardWrapper-sc-1g3s676-5 JIWVz Banner__StyledBanner-sc-6825al-0 bfAGjz"
        href={null}
        id={null}
        media={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-icfo76-2 eUVQsH"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fIRUJx"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ"
              id={null}
              rows={null}
            >
              <h5
                className="Typography__TitleText-sc-19auepv-2 KxMwb"
                fontSize="1.15em"
                fontWeight={400}
                letterSpacing="0px"
              >
                This is a Standard notification.
              </h5>
            </section>
          </div>
          <div
            className="Bar__Slot-icfo76-1 cxljst"
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 bDhxPl"
              disabled={null}
              href={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 fvyOLy Banner__Close-sc-6825al-1 cgOoTm"
                color="link"
                data-icon="times"
                data-prefix="far"
                focusable="false"
                fontSize="1.35em"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
        fontSize="0.876em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.2px"
      >
        Show Notification
      </label>
    </section>
  </button>,
]
`;
